[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/assets_pong/bola.png" type="Texture" id=1]
[ext_resource path="res://Cenas/pong/entities/Ball/Ball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=6]
radius = 20.6155

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.74902, 0.74902, 0.74902, 0, 0.814087, 0.114258, 0.914063, 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.625731, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.914551, 0.879897, 0.0893116, 1, 0.956863, 0.941176, 0.545098, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 1.0
angular_velocity = 329.14
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 0.59
color_ramp = SubResource( 4 )

[node name="Ball" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = -1.17543
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -73, 6 )
z_index = 1
texture = ExtResource( 1 )

[node name="RacketSound" type="AudioStreamPlayer" parent="."]

[node name="WallSound" type="AudioStreamPlayer" parent="."]

[node name="Trail" type="Node" parent="."]

[node name="Points" type="Line2D" parent="Trail"]
width = 50.0
gradient = SubResource( 2 )
texture_mode = 1060439283

[node name="GoalExplosion" type="Particles2D" parent="."]
position = Vector2( -1, -2 )
z_index = 1
emitting = false
amount = 150
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
